       path" present on an instance's state, which is also necessary
       when combining the usage of merge() with serialized state
       and associated options that should be preserved.  
       
     - The all new merge() is showcased in a new comprehensive 
       example of how to integrate Beaker with SQLAlchemy.  See
       the notes in the "examples" note below.
  
  - Using a "dynamic" loader with a "secondary" table now produces
    a query where the "secondary" table is *not* aliased.  This
    allows the secondary Table object to be used in the "order_by"
    attribute of the relation(), and also allows it to be used
    in filter criterion against the dynamic relation.
    [ticket:1531]

  - relation() with uselist=False will emit a warning when 
    an eager or lazy load locates more than one valid value for 
    the row.  This may be due to primaryjoin/secondaryjoin 
    conditions which aren't appropriate for an eager LEFT OUTER 
    JOIN or for other conditions.  [ticket:1643]
    
  - an explicit check occurs when a synonym() is used with 
    map_column=True, when a ColumnProperty (deferred or otherwise)
    exists separately in the properties dictionary sent to mapper
    with the same keyname.   Instead of silently replacing 
    the existing property (and possible options on that property), 
    an error is raised.  [ticket:1633]
    
  - a "dynamic" loader sets up its query criterion at construction
    time so that the actual query is returned from non-cloning
    accessors like "statement".
    
  - the "named tuple" objects returned when iterating a
    Query() are now pickleable.

  - mapping to a select() construct now requires that you 
    make an alias() out of it distinctly.   This to eliminate
    confusion over such issues as [ticket:1542]
    
  - query.join() has been reworked to provide more consistent 
    behavior and more flexibility (includes [ticket:1537])

  - query.select_from() accepts multiple clauses to produce 